@startuml ERD_Chen_v3.3_core
' =============================================================================
' ERD v3.3 - Chen's Notation (Peter Chen) - CORE-DB
' Sentinel Auth - Core Database
' =============================================================================

title ERD v3.3 - Chen's Notation - <b>CORE-DB</b>

skinparam dpi 120
skinparam shadowing false

' ------------------------------------------------------------------------------
' CORE-DB ENTITIES
' ------------------------------------------------------------------------------

package "CORE-DB (core-app)" {

    entity "USER" as user {
        * id : UUID <<PK>>
        --
        username : TEXT <<UK>>
        password_hash : TEXT
        email : TEXT <<UK>>
        full_name : TEXT
        status : TEXT
        admin_mfa_required : BOOLEAN
        detection_mfa_once : BOOLEAN
        last_login_at : TIMESTAMPTZ
        failed_login_count : INTEGER
        locked_at : TIMESTAMPTZ
        created_at : TIMESTAMPTZ
        updated_at : TIMESTAMPTZ
    }

    entity "ROLE" as role {
        * id : TEXT <<PK>>
        --
        name : TEXT
        name_vi : TEXT
        description : TEXT
        created_at : TIMESTAMPTZ
    }

    entity "USER_ROLE" as user_role {
        * id : UUID <<PK>>
        --
        * user_id : UUID <<FK>>
        * role_id : TEXT <<FK>>
        assigned_at : TIMESTAMPTZ
        assigned_by : UUID <<FK>>
    }

    entity "IP_ADDRESS" as ip_address {
        * id : UUID <<PK>>
        --
        * ip_address : INET <<UK>>
        country_code : TEXT
        country_name : TEXT
        is_proxy : BOOLEAN
        is_vpn : BOOLEAN
        is_tor : BOOLEAN
        first_seen_at : TIMESTAMPTZ
        last_seen_at : TIMESTAMPTZ
    }

    entity "SESSION" as session {
        * id : UUID <<PK>>
        --
        * user_id : UUID <<FK>>
        access_token_hash : TEXT
        refresh_token_hash : TEXT
        refresh_token_family : UUID
        token_jti : TEXT <<UK>>
        expires_at : TIMESTAMPTZ
        last_activity_at : TIMESTAMPTZ
        revoked_at : TIMESTAMPTZ
        ip_address_id : UUID <<FK>>
        user_agent : TEXT
        created_at : TIMESTAMPTZ
        updated_at : TIMESTAMPTZ
    }

    entity "MFA_TRANSACTION" as mfa_tx {
        * id : UUID <<PK>>
        --
        * user_id : UUID <<FK>>
        mfa_type : TEXT
        status : TEXT
        bound_ip : INET
        notification_id : UUID <<FK>>
        fail_count : INTEGER
        expires_at : TIMESTAMPTZ
        created_at : TIMESTAMPTZ
        updated_at : TIMESTAMPTZ
    }

    entity "MFA_NOTIFICATION" as mfa_notif {
        * id : UUID <<PK>>
        --
        * mfa_transaction_id : UUID <<FK>>
        channel : TEXT
        recipient : TEXT
        mfa_code_hash : TEXT
        sent_at : TIMESTAMPTZ
        delivered_at : TIMESTAMPTZ
        failed_at : TIMESTAMPTZ
        failure_reason : TEXT
        expires_at : TIMESTAMPTZ
        verified_at : TIMESTAMPTZ
        created_at : TIMESTAMPTZ
    }

    entity "AUDIT_LOG" as audit_log {
        * id : UUID <<PK>>
        --
        request_id : UUID
        actor_id : UUID <<FK>>
        actor_type : TEXT
        action : TEXT
        resource : TEXT
        resource_id : UUID
        before_state : JSONB
        after_state : JSONB
        change_reason : TEXT
        ip_address : INET
        user_agent : TEXT
        created_at : TIMESTAMPTZ
    }

    entity "TRUSTED_DEVICE" as trusted_device {
        * id : UUID <<PK>>
        --
        * user_id : UUID <<FK>>
        * device_fingerprint : TEXT
        device_name : TEXT
        last_ip : INET
        last_user_agent : TEXT
        last_used_at : TIMESTAMPTZ
        expires_at : TIMESTAMPTZ
        created_at : TIMESTAMPTZ
    }

    entity "SYSTEM_SETTING" as system_setting {
        * key : TEXT <<PK>>
        --
        value : TEXT
        value_type : TEXT
        description : TEXT
        category : TEXT
        updated_by : UUID <<FK>>
        updated_at : TIMESTAMPTZ
    }

    entity "OUTBOX_EVENT" as outbox_event {
        * id : UUID <<PK>>
        --
        aggregate_type : TEXT
        aggregate_id : UUID
        event_type : TEXT
        version : INTEGER
        payload : JSONB
        headers : JSONB
        status : TEXT
        retry_count : INTEGER
        max_retries : INTEGER
        last_error : TEXT
        created_at : TIMESTAMPTZ
        published_at : TIMESTAMPTZ
    }

    entity "USER_NOTIFICATION" as user_notification {
        * id : UUID <<PK>>
        --
        * user_id : UUID <<FK>>
        type : TEXT
        title : TEXT
        body : TEXT
        link : TEXT
        priority : TEXT
        read : BOOLEAN
        read_at : TIMESTAMPTZ
        expires_at : TIMESTAMPTZ
        created_at : TIMESTAMPTZ
    }

    entity "RATE_LIMIT" as rate_limit {
        * ip_address : INET <<PK>>
        * action : TEXT <<PK>>
        --
        count : INTEGER
        max_count : INTEGER
        window_start : TIMESTAMPTZ
    }

}

' ------------------------------------------------------------------------------
' CORE-DB RELATIONSHIPS (Chen Notation with cardinality)
' ------------------------------------------------------------------------------

user ||--o{ user_role : "HAS (1,N)"
role ||--o{ user_role : "ASSIGNED_TO (1,N)"
user_role }o--|| user : "assigned_by (0,1)"

user ||--o{ session : "CREATES (0,N)"
session }o--|| ip_address : "FROM (0,1)"

user ||--o{ mfa_tx : "INITIATES (0,N)"
mfa_tx ||--|| mfa_notif : "CREATES (1,1)"

user ||--o{ audit_log : "ACTIONS_BY (0,N)"
user ||--o{ trusted_device : "REGISTERS (0,N)"
user ||--o{ user_notification : "RECEIVES (0,N)"
user ||--o{ system_setting : "UPDATES (0,N)"
user ||--o{ outbox_event : "EMITS (0,N)"

@enduml

@startuml ERD_Chen_v3.3_detection
' =============================================================================
' ERD v3.3 - Chen's Notation - DETECTION-DB
' Sentinel Auth - Detection Engine Database
' =============================================================================

title ERD v3.3 - Chen's Notation - <b>DETECTION-DB</b>

skinparam dpi 120
skinparam shadowing false

' ------------------------------------------------------------------------------
' DETECTION-DB ENTITIES
' ------------------------------------------------------------------------------

package "DETECTION-DB (detection-engine)" {

    entity "POLICY" as policy {
        * id : UUID <<PK>>
        --
        * version : TEXT <<UK>>
        name : TEXT
        description : TEXT
        rules : JSONB
        config : JSONB
        is_active : BOOLEAN
        created_by : UUID <<FK>>
        created_at : TIMESTAMPTZ
        activated_at : TIMESTAMPTZ
        deactivated_at : TIMESTAMPTZ
    }

    entity "LOGIN_ATTEMPT" as login_attempt {
        * id : UUID <<PK>>
        --
        * event_id : UUID <<UK>>
        user_id : UUID <<FK>>
        username_attempted : TEXT
        outcome : TEXT
        mfa_used : BOOLEAN
        ip_address : INET
        user_agent : TEXT
        timestamp : TIMESTAMPTZ
        status : TEXT
        policy_id : UUID <<FK>>
        request_id : UUID
        primary_alert_id : UUID <<FK>>
        risk_level : TEXT
        detection_decision : TEXT
        created_at : TIMESTAMPTZ
        updated_at : TIMESTAMPTZ
    }

    entity "RISK_ASSESSMENT" as risk_assessment {
        * id : UUID <<PK>>
        --
        * login_attempt_id : UUID <<FK,UK>>
        policy_id : UUID <<FK>>
        rule_score : NUMERIC
        ml_score : NUMERIC
        combined_score : NUMERIC
        ml_status : TEXT
        ml_model_version : TEXT
        rule_hits : JSONB
        ml_reason_codes : JSONB
        ml_features_used : JSONB
        risk_level : TEXT
        decision : TEXT
        created_at : TIMESTAMPTZ
    }

    entity "DETECTION_LOG" as detection_log {
        * id : UUID <<PK>>
        --
        login_attempt_id : UUID <<FK>>
        request_id : UUID
        stage : TEXT
        stage_detail : TEXT
        rule_id : UUID
        rule_name : TEXT
        triggered : BOOLEAN
        score_contribution : NUMERIC
        decision : TEXT
        reason : TEXT
        details : JSONB
        created_at : TIMESTAMPTZ
    }

    entity "SOC_ANALYST" as soc_analyst {
        * id : UUID <<PK>>
        --
        * user_id : UUID <<FK,UK>>
        display_name : TEXT
        is_active : BOOLEAN
        max_alerts : INTEGER
        created_at : TIMESTAMPTZ
        updated_at : TIMESTAMPTZ
    }

    entity "ALERT" as alert {
        * id : UUID <<PK>>
        --
        * login_attempt_id : UUID <<FK>>
        policy_id : UUID <<FK>>
        request_id : UUID
        status : TEXT
        risk_level : TEXT
        detection_reason : TEXT
        detection_scores : JSONB
        assigned_to_id : UUID <<FK>>
        resolved_by_id : UUID <<FK>>
        resolved_at : TIMESTAMPTZ
        resolution : TEXT
        notes : TEXT
        created_at : TIMESTAMPTZ
        updated_at : TIMESTAMPTZ
    }

    entity "ALERT_TIMELINE" as alert_timeline {
        * id : UUID <<PK>>
        --
        * alert_id : UUID <<FK>>
        event_type : TEXT
        actor_id : UUID <<FK>>
        actor_type : TEXT
        old_value : TEXT
        new_value : TEXT
        comment : TEXT
        ip_address : INET
        created_at : TIMESTAMPTZ
    }

}

' ------------------------------------------------------------------------------
' DETECTION-DB RELATIONSHIPS (Chen Notation with cardinality)
' ------------------------------------------------------------------------------

login_attempt ||--|| risk_assessment : "HAS (1,1)"
login_attempt ||--o{ detection_log : "GENERATES (0,N)"
login_attempt ||--o{ alert : "TRIGGERS (0,N)"
login_attempt }o--|| policy : "EVALUATED_WITH (0,1)"
login_attempt }o--o| alert : "PRIMARY_ALERT (0,1)"

risk_assessment }o--|| policy : "EVALUATED_WITH (0,1)"
alert }o--|| policy : "CONTEXT (0,1)"

alert }o--|| soc_analyst : "ASSIGNED_TO (0,1)"
alert }o--|| soc_analyst : "RESOLVED_BY (0,1)"
alert ||--o{ alert_timeline : "HAS (0,N)"

' Cross-service reference: soc_analyst.user_id -> user.id (core-db)
' Represented as informational note
note right of soc_analyst
  **Cross-service FK:**
  soc_analyst.user_id
  references user.id
  in core-db
end note

@enduml

@startuml ERD_Chen_v3.3_ml
' =============================================================================
' ERD v3.3 - Chen's Notation - ML-SERVICE-DB
' Sentinel Auth - ML Service Database
' =============================================================================

title ERD v3.3 - Chen's Notation - <b>ML-SERVICE-DB</b>

skinparam dpi 120
skinparam shadowing false

' ------------------------------------------------------------------------------
' ML-SERVICE-DB ENTITIES
' ------------------------------------------------------------------------------

package "ML-SERVICE-DB (ml-service)" {

    entity "MODEL_VERSION" as model_version {
        * id : UUID <<PK>>
        --
        name : TEXT
        * version : TEXT <<UK>>
        algorithm : TEXT
        description : TEXT
        model_path : TEXT
        config : JSONB
        status : TEXT
        is_production : BOOLEAN
        trained_by : UUID <<FK>>
        training_date : TIMESTAMPTZ
        deployed_at : TIMESTAMPTZ
        archived_at : TIMESTAMPTZ
        created_at : TIMESTAMPTZ
        updated_at : TIMESTAMPTZ
    }

    entity "INFERENCE_LOG" as inference_log {
        * id : UUID <<PK>>
        --
        * request_id : UUID <<UK>>
        model_version_id : UUID <<FK>>
        model_version_used : TEXT
        features : JSONB
        raw_score : NUMERIC
        normalized_score : NUMERIC
        is_anomaly : BOOLEAN
        reason_codes : JSONB
        model_status : TEXT
        processing_time_ms : INTEGER
        error_message : TEXT
        ip_address : INET
        created_at : TIMESTAMPTZ
    }

    entity "FEATURE_STATISTIC" as feature_statistic {
        * id : UUID <<PK>>
        --
        * feature_name : TEXT
        timestamp : TIMESTAMPTZ
        count : BIGINT
        mean : NUMERIC
        std : NUMERIC
        min : NUMERIC
        max : NUMERIC
        p25 : NUMERIC
        p50 : NUMERIC
        p75 : NUMERIC
        p95 : NUMERIC
        anomaly_rate : NUMERIC
        created_at : TIMESTAMPTZ
    }

}

' ------------------------------------------------------------------------------
' ML-SERVICE-DB RELATIONSHIPS (Chen Notation with cardinality)
' ------------------------------------------------------------------------------

inference_log }o--|| model_version : "REFERENCES (0,1)"

note bottom of model_version
  **ML Service is stateless.**
  DB used for model registry,
  inference logs, and feature stats.
end note

@enduml
